# advent-of-code

./: .gitignore  Cargo.toml  Justfile  README.md  algorithmia.conf
2018/: Cargo.toml  Justfile  README.md
2018/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
2019/: Cargo.toml  Justfile  README.md  template.rs
2019/src/: day1.rs  day2.rs  lib.rs  util.rs
2023/: Cargo.toml  Justfile  README.md  template.rs
2023/benches/: bench_aoc.rs
2023/examples/: day1.rs  day2.rs  day3.rs  day4.rs
2023/src/: day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  math.rs  parse.rs
2024/: .gitignore  Cargo.toml  Justfile  README.md  template.rs
2024/benches/: bench_aoc.rs
2024/src/: day1.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  math.rs  parse.rs
src/: day0.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  util.rs
