[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
once_cell = "1.18.0"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]
# criterion = "0.5"
divan = "0.1"
indoc = "2.0"

[features]
default = []
bench = []

[[bench]]
name = "day1"
path = "examples/day1.rs"
harness = false

[[bench]]
name = "day2"
path = "examples/day2.rs"
harness = false

[[bench]]
name = "day3"
path = "examples/day3.rs"
harness = false
