[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.22.1"
once_cell = "1.18.0"
paste = "1.0.14"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
divan = { version = "0.1", optional = true }
itertools = "0.13.0"
derive_deref = "1.1.1"
aho-corasick = "1.1.2"
parse-display = "0.10.0"
maplit = "1.0.2"
num = "0.4.1"
grid = "0.15.0"

[dev-dependencies]
indoc = "2.0"
divan = "0.1"

[features]
default = []
bench = ["divan"]

[[bench]]
name = "bench_aoc"
harness = false
